argocd/applications/headlamp/ingressroute-headlamp-k8s-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-private
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.k8s.proompteng.ai`)
      services:
        - name: headlamp
          port: 80
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
